# goose-mcp

./: .env.example  .gitignore  .mcpbignore  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  start.bat  start.ps1
data/: .gitkeep
src/goose_mcp/: __init__.py  __main__.py  _version.py  api.py  config.py  goose_runner.py  server.py
webapp/: index.html  package.json  vite.config.ts
webapp/src/: App.tsx  index.css
webapp/src/pages/: ChatPage.tsx  Dashboard.tsx  ExtensionsPage.tsx  ProvidersPage.tsx  RecipesPage.tsx  SessionsPage.tsx  StatusPage.tsx  ToolsPage.tsx
