[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goose-mcp"
version = "0.1.0"
description = "MCP server wrapping the goose CLI — sessions, recipes, providers, extensions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "prefab-ui>=0.14.0",
    "starlette>=1.0.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.1a0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
goose-mcp = "goose_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/goose_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
